# nyarlathotep

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  makefile  note.md  scanner  scanner.c
.github/workflows/: cmake.yml
ast/: ast.cpp  ast.h  ast_builder.cpp  ast_builder.h
codegen/: code_gen.cpp  code_gen.h
error/: error_listener.cpp  error_listener.h  error_reporter.cpp  error_reporter.h
grammar/: AST.asdl  Lexer.g4  Nyar.g4  Silly.g4  asdl.py  asdl_cpp.py
runtime/: io.c  io.h  runtime.cpp  runtime.h
src/: Makefile  MyGrammar.g4  ast_visitor.cpp  ast_visitor.h  flex.l  main.cpp  node.hpp  parsing.y  scanner.l  visitor.hpp
test/: expr.sl  lexical_tokens.sl  test1.sl  test5.pl0
test_cases/: declarations.nyar  lexical_tokens.nyar  simple.nyar
